<resources>
    <string name="app_name">Implicit Intent App</string>
    <string name="email">email</string>
    <string name="call_phone">phone</string>
    <string name="browser">browser</string>
    <string name="camera">camera</string>
    <string name="video">video</string>
    <string name="sms">sms</string>
    <string name="audio_recorder">audio recorder</string>
    <string name="audio_manager">audio manager</string>
    <string name="wifi">wifi</string>
    <string name="tts">tts</string>
    <string name="emailwajib">alamat web tidak boleh kosong</string>
</resources>
