<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <Button
        android:layout_width="match_parent"
        android:text="@string/camera"
        android:id="@+id/btncamera"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:text="video"
        android:id="@+id/video"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:text="@string/tts"
        android:id="@+id/btntts"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:text="@string/sms"
        android:id="@+id/btnsms"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnemail"
        android:text="@string/email"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnwifi"
        android:text="@string/wifi"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnphone"
        android:text="@string/call_phone"/>
<Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnbrowser"
        android:text="@string/browser"/>
<Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnaudiomanager"
        android:text="@string/audio_manager"/>
<Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnaudiorecorder"
        android:text="@string/audio_recorder"/>

</LinearLayout>